--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,5 @@
+set-option -g default-shell /bin/zsh
+
 # Pro esc não ficar lerdo dentro do nvim dentro do tmux
 # https://github.com/neovim/neovim/issues/2035
 set -sg escape-time 10
