--- a/i3/config
+++ b/i3/config
@@ -9,10 +9,49 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
+################################################################################
+
 # Dicas/tips:
 # xmodmap in terminal to see all possibilities
 # xmodmap -pke to show keycodes
 # https://thevaluable.dev/i3-config-mouseless/
+# https://github.com/alberto-santini/i3-configuration-x1/blob/master/README.md
+
+# Dependencies:
+# i3 blocks at least version 1.5
+# Fonts Awesome
+# Flameshot
+# alacritty
+# For some blocklets, docker and dunst I guess
+# In order for the brightness blocklet to work as it is configured now, it is
+# necessary to create a sudoer file (eg /etc/sudoers.d/xbacklight) and give your
+# user the hability to run xbacklight without password:
+# user ALL=(ALL) NOPASSWD: /user/bin/xbacklight
+# In doubt, check the documentation here: https://github.com/vivien/i3blocks-contrib/tree/master/backlight
+
+################################################################################
+### ---------------- Important/different key maps -------------------------- ###
+# mod+q and mod+w change focus to left/right
+# mod+e toggle tiling layouts and mod+t go to tabbed layout
+# mod+backspace shows "System control" menu: lock screen, lockout, reboot or shutdown
+# mod+shift+backspace shows menu to controll brightness, microphone and volume
+# mod+m toggle mute sound, mod+, decreases sound and mod+. increases it
+# Same bindings for microphone, but holding shift:
+# mod+shift+m toggle mute mic, mod+shift+, decrease mic volume and mod+shift+. increases it
+# mod+[ and mod+] decreases and increases brightness
+# mod+enter opens alacritty
+# mod+b opens firefox
+# mod+r enters resize mode
+# mod+hjkl changes focus, and mod+shift+hjkl resizes
+# mod+f full screen toggle
+# mod+shift+q closes window
+# On those menus (resize mode, system control mode and vol/mic/brightness control),
+# there is always plenty ways of quiting. The same command used to start the menu
+# always quit it, as well as Control+C, ESC and simply the Q key. The only exception
+# being the resize mode, where Q acts as H (since mod+q acts as mod+h, change focus)
+# mod+shift+r restarts i3 presenving layout and sessions
+# mod+shift+c reloads the configuration file
+################################################################################
 
 # Super key = Mod4
 set $mod Mod4
@@ -20,7 +59,6 @@ set $mod Mod4
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:monospace 9
-# font Font Awesome 9
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -37,38 +75,40 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 
-# Use pactl to adjust volume in PulseAudio.
-set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+################
+## Sytem "Numbers" (?) Need a better name
+#### Volume / Microphone / Brightness
+################
 
-# 59 = , Volume down
-# 60 = . Volume up
-# 61 = ; Volume mute toggle
-# 97 = / Microphone mute toggle
-bindcode $mod+59 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && $refresh_i3status
-bindcode $mod+60 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && $refresh_i3status
-bindcode $mod+61 exec --no-startup-id pactl set-sink-mute   @DEFAULT_SINK@ toggle && $refresh_i3status
-bindcode $mod+97 exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
-# TODO show microphone status on i3status bar
-# TODO make bindings for microphone volume control
-# https://github.com/alberto-santini/i3-configuration-x1/blob/master/README.md
-# TODO make this work
-bindsym $mod+bracketleft    exec xbacklight -inc 5
-bindsym $mod+bracketright   exec xbacklight -inc 5
+# set $refresh_i3_bar killall -SIGUSR1 i3blocks
+
+# Volume (i3 blocklet must have signal=10 matching this RTMIN+10)
+set $refresh_audio_icon pkill -RTMIN+10 i3blocks
+bindsym XF86AudioRaiseVolume  exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_audio_icon
+bindsym XF86AudioLowerVolume  exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_audio_icon
+bindsym XF86AudioMute         exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_audio_icon
+# ---
+bindsym $mod+comma   exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -2%  && $refresh_audio_icon
+bindsym $mod+period  exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +2%  && $refresh_audio_icon
+bindsym $mod+m       exec --no-startup-id pactl set-sink-mute   @DEFAULT_SINK@ toggle && $refresh_audio_icon
+
+# Mic (i3 blocklet must have signal=11 matching this RTMIN+11)
+set $refresh_mic_icon pkill -RTMIN+11 i3blocks
+bindsym XF86AudioMicMute  exec --no-startup-id pactl set-source-mute "alsa_input.pci-0000_00_1f.3.analog-stereo"   toggle && $refresh_mic_icon
+bindsym $mod+Shift+comma  exec --no-startup-id pactl set-source-volume "alsa_input.pci-0000_00_1f.3.analog-stereo" -2%  &&   $refresh_mic_icon
+bindsym $mod+Shift+period exec --no-startup-id pactl set-source-volume "alsa_input.pci-0000_00_1f.3.analog-stereo" +2%  &&   $refresh_mic_icon
+bindsym $mod+Shift+m      exec --no-startup-id pactl set-source-mute   "alsa_input.pci-0000_00_1f.3.analog-stereo" toggle && $refresh_mic_icon
+
+# Brightness (i3 blocklet must have signal=12 matching this RTMIN+12)
+set $refresh_brightness_icon pkill -RTMIN+12 i3blocks
+bindsym $mod+bracketleft    exec xbacklight -dec 5 && $refresh_brightness_icon
+bindsym $mod+bracketright   exec xbacklight -inc 5 && $refresh_brightness_icon
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
-# start a terminal
-# bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec alacritty
-
 # kill focused window
 bindsym $mod+Shift+q kill
-# bindsym $mod+Shift+e kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec --no-startup-id dmenu_run
@@ -113,7 +153,6 @@ bindsym $mod+s split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
-bindsym $mod+z fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
 # bindsym $mod+q layout stacking
@@ -180,10 +219,11 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 # bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
-# shutdown / restart / suspend
+# Menu to quickly shutdown/restart/suspend
 # set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (CTRL+s) shutdown
 set $mode_system Lock (l), Logout/Exit (e), Reboot (r), Shutdown (CTRL+s)
 
+bindsym $mod+BackSpace mode "$mode_system"
 mode "$mode_system" {
   bindsym l exec --no-startup-id $i3lockwall, mode "default"
   bindsym e exec --no-startup-id i3-msg exit, mode "default"
@@ -199,11 +239,100 @@ mode "$mode_system" {
   bindsym $mod+BackSpace mode "default"
 }
 
-bindsym $mod+BackSpace mode "$mode_system"
+# Create an "interactively" menu to set volume/mic/brightness
+# to a "specific" number (0, 10, 20, 30, ..., 100)
+# All multiples of 10 from 0 to 100
+### Brightness can't be 0, it goes to 1 instead
+### Select T for 10
+# TODO Be able to pass exact number (maybe with dmenu)
+set $mode_control_numbers Set manually: (B) Brightness, (M) Mic volume, (V) Volume
+set $brightness_control (B) Enter value (will be multiplied by 10, t for ten)
+set $mic_control        (M) Enter value (will be multiplied by 10, t for ten)
+set $volume_control     (V) Enter value (will be multiplied by 10, t for ten)
+
+bindsym $mod+Shift+BackSpace mode "$mode_control_numbers"
+mode "$mode_control_numbers" {
+  bindsym b mode "$brightness_control"
+  bindsym m mode "$mic_control"
+  bindsym v mode "$volume_control"
+
+  bindsym Escape mode "default"
+  bindsym Ctrl+c mode "default"
+  bindsym q mode "default"
+  bindsym $mod+Shift+BackSpace mode "default"
+}
+mode "$brightness_control" {
+  bindsym 0 exec xbacklight -set 1   && $refresh_brightness_icon
+  bindsym 1 exec xbacklight -set 10  && $refresh_brightness_icon
+  bindsym 2 exec xbacklight -set 20  && $refresh_brightness_icon
+  bindsym 3 exec xbacklight -set 30  && $refresh_brightness_icon
+  bindsym 4 exec xbacklight -set 40  && $refresh_brightness_icon
+  bindsym 5 exec xbacklight -set 50  && $refresh_brightness_icon
+  bindsym 6 exec xbacklight -set 60  && $refresh_brightness_icon
+  bindsym 7 exec xbacklight -set 70  && $refresh_brightness_icon
+  bindsym 8 exec xbacklight -set 80  && $refresh_brightness_icon
+  bindsym 9 exec xbacklight -set 90  && $refresh_brightness_icon
+  bindsym t exec xbacklight -set 100 && $refresh_brightness_icon
+
+  bindsym b mode "$brightness_control"
+  bindsym m mode "$mic_control"
+  bindsym v mode "$volume_control"
+
+  bindsym Escape mode "default"
+  bindsym Ctrl+c mode "default"
+  bindsym q mode "default"
+  bindsym $mod+Shift+BackSpace mode "default"
+}
+mode "$mic_control" {
+  bindsym 0 exec --no-startup-id pactl set-source-volume "alsa_input.pci-0000_00_1f.3.analog-stereo" 0%   && $refresh_mic_icon
+  bindsym 1 exec --no-startup-id pactl set-source-volume "alsa_input.pci-0000_00_1f.3.analog-stereo" 10%  && $refresh_mic_icon
+  bindsym 2 exec --no-startup-id pactl set-source-volume "alsa_input.pci-0000_00_1f.3.analog-stereo" 20%  && $refresh_mic_icon
+  bindsym 3 exec --no-startup-id pactl set-source-volume "alsa_input.pci-0000_00_1f.3.analog-stereo" 30%  && $refresh_mic_icon
+  bindsym 4 exec --no-startup-id pactl set-source-volume "alsa_input.pci-0000_00_1f.3.analog-stereo" 40%  && $refresh_mic_icon
+  bindsym 5 exec --no-startup-id pactl set-source-volume "alsa_input.pci-0000_00_1f.3.analog-stereo" 50%  && $refresh_mic_icon
+  bindsym 6 exec --no-startup-id pactl set-source-volume "alsa_input.pci-0000_00_1f.3.analog-stereo" 60%  && $refresh_mic_icon
+  bindsym 7 exec --no-startup-id pactl set-source-volume "alsa_input.pci-0000_00_1f.3.analog-stereo" 70%  && $refresh_mic_icon
+  bindsym 8 exec --no-startup-id pactl set-source-volume "alsa_input.pci-0000_00_1f.3.analog-stereo" 80%  && $refresh_mic_icon
+  bindsym 9 exec --no-startup-id pactl set-source-volume "alsa_input.pci-0000_00_1f.3.analog-stereo" 90%  && $refresh_mic_icon
+  bindsym t exec --no-startup-id pactl set-source-volume "alsa_input.pci-0000_00_1f.3.analog-stereo" 100% && $refresh_mic_icon
+
+  bindsym b mode "$brightness_control"
+  bindsym m mode "$mic_control"
+  bindsym v mode "$volume_control"
+
+  bindsym Escape mode "default"
+  bindsym Ctrl+c mode "default"
+  bindsym q mode "default"
+  bindsym $mod+Shift+BackSpace mode "default"
+}
+mode "$volume_control" {
+  bindsym 0  exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ 0%  && $refresh_audio_icon
+  bindsym 1  exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ 10% && $refresh_audio_icon
+  bindsym 2  exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ 20% && $refresh_audio_icon
+  bindsym 3  exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ 30% && $refresh_audio_icon
+  bindsym 4  exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ 40% && $refresh_audio_icon
+  bindsym 5  exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ 50% && $refresh_audio_icon
+  bindsym 6  exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ 60% && $refresh_audio_icon
+  bindsym 7  exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ 70% && $refresh_audio_icon
+  bindsym 8  exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ 80% && $refresh_audio_icon
+  bindsym 9  exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ 90% && $refresh_audio_icon
+  bindsym t exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ 100% && $refresh_audio_icon
+
+  bindsym b mode "$brightness_control"
+  bindsym m mode "$mic_control"
+  bindsym v mode "$volume_control"
+
+  bindsym Escape mode "default"
+  bindsym Ctrl+c mode "default"
+  bindsym q mode "default"
+  bindsym $mod+Shift+BackSpace mode "default"
+}
 
 # Wallpaper
-# exec sh ~/scripts/setwallpaper.sh ~/Pictures/wallpapers/kill-la-kill/wallpaperflare.com_wallpaper.jpg
-exec sh ~/scripts/setwallpaper.sh ~/Pictures/wallpapers/kill-la-kill/ryuko-with-glasses.jpg
+exec sh ~/scripts/setwallpaper.sh ~/Pictures/wallpapers/wall.jpg
+# Lock screen
+# set $i3lockwall i3lock -i ~/Pictures/wallpapers/tux3.png -t
+set $i3lockwall i3lock
 
 # Disable notebook things
 exec sh ~/scripts/disable-keyboard.sh
@@ -211,6 +340,7 @@ exec sh ~/scripts/disable-touchpad.sh
 
 # Compositor
 exec_always picom
+
 # Meu Deus, esse barulho é muito alto! Tirar o "pc speaker", que são
 # os bips quando a busca no Firfox não encontra nada, por exemplo
 exec rmmod pcspkr
@@ -218,6 +348,7 @@ exec rmmod pcspkr
 focus_follows_mouse no
 
 # resize window (you can also use the mouse for that)
+bindsym $mod+r mode "resize"
 mode "resize" {
   # These bindings trigger as soon as you enter the resize mode
 
@@ -232,6 +363,8 @@ mode "resize" {
 
   bindsym q resize shrink width 5 px or 5 ppt
   bindsym w resize grow width 5 px or 5 ppt
+  bindsym a resize grow height 5 px or 5 ppt
+  bindsym s resize shrink height 5 px or 5 ppt
 
   bindsym Left resize shrink width 10 px or 10 ppt
   bindsym Down resize grow height 10 px or 10 ppt
@@ -245,8 +378,6 @@ mode "resize" {
   bindsym $mod+r mode "default"
 }
 
-bindsym $mod+r mode "resize"
-
 # colors
 # For the urgent background, I picked some color from here: https://encycolorpedia.com/d70a53
 # This is also nice: http://paperheartdesign.com/blog/color-palette-terrific-teal
@@ -257,19 +388,26 @@ set $textcolor  #f4f4f4
 set $itextcolor #888888
 
 set $ubgcolor   #8b1a38
+# Note: Using something like $bgcolor70 will use $bgcolor with appended 70 at
+#       the end. This can be useful to set transparency based on itens, and not
+#       based on the variable.
 # --------------------- border --- background --- text ------ indicator
-client.focused          $bgcolor   $bgcolor       $textcolor  $bgcolor
-client.unfocused        $ibgcolor  $ibgcolor      $itextcolor $ibgcolor
+client.focused          $bgcolor   $bgcolor70     $textcolor  $bgcolor
+client.unfocused        $ibgcolor  $ibgcolorDD    $itextcolor $ibgcolor
 client.focused_inactive $ibgcolor  $ibgcolor      $itextcolor $ibgcolor
 client.urgent           $ubgcolor  $ubgcolor      $textcolor  $ubgcolor
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
+# Top bar using i3blocks (needs version 1.5 or more! Build from source if needed)
+# https://github.com/vivien/i3blocks#installation
 bar {
-  status_command i3status --config ~/.config/i3/i3status.conf
+  # status_command i3status --config ~/.config/i3/i3status.conf
+  status_command i3blocks -c ~/.config/i3/i3blocks.conf
   position top
   font pango:Font Awesome 9
   workspace_min_width 30
+  i3bar_command i3bar --transparency
   colors {
       background #000000
       statusline #ffffff
@@ -296,12 +434,21 @@ bar {
 # xprop | grep WM_CLASS
 # This results in something like WM_CLASS(STRING) = "instance", "class"
 assign [instance="discord" class="discord"] 10
-assign [instance="zoom" class="zoom"] 8
+assign [instance="zoom" class="zoom"] 9
 for_window [instance="zoom" class="zoom"] floating enable
 for_window [instance="gnome-mines" class="Gnome-mines"] floating enable
 for_window [window_role="pop_up"] floating enable
 for_window [window_role="task_dialog"] floating enable
 
-for_window [class="^.*"] border pixel 1
+for_window [class="^.*"] border pixel 2
+# new_window 1pixel
 
+bindsym $mod+Return exec alacritty
 bindsym $mod+b exec firefox
+
+# Print screen with flameshot
+bindsym Print exec flameshot full -c
+bindsym Control+Print exec flameshot gui
+bindsym Mod1+Print exec flameshot screen -c
+
+bindsym Shift+Print exec flameshot full -p ~/Pictures/screenshots/
