--- a/i3/config
+++ b/i3/config
@@ -111,7 +111,9 @@ floating_modifier $mod
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run
+# Consider making some patches to dmenu, at least the fuzzy matcher: https://tools.suckless.org/dmenu/patches/fuzzymatch/
+# The -i flag for canse insensitive
+bindsym $mod+d exec --no-startup-id dmenu_run -i
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
@@ -173,15 +175,15 @@ bindsym $mod+Shift+a focus child
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
-set $ws5 "5"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
+set $ws1  "1"
+set $ws2  "2"
+set $ws3  "3"
+set $ws4  "4"
+set $ws5  "5"
+set $ws6  "6"
+set $ws7  "7"
+set $ws8  "8"
+set $ws9  "9"
 set $ws10 "10"
 
 # switch to workspace
@@ -208,9 +210,53 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
+# Move focused container to workspace and switch to that workspace
+bindsym $mod+Control+1 move container to workspace number $ws1,  workspace $ws1
+bindsym $mod+Control+2 move container to workspace number $ws2,  workspace $ws2
+bindsym $mod+Control+3 move container to workspace number $ws3,  workspace $ws3
+bindsym $mod+Control+4 move container to workspace number $ws4,  workspace $ws4
+bindsym $mod+Control+5 move container to workspace number $ws5,  workspace $ws5
+bindsym $mod+Control+6 move container to workspace number $ws6,  workspace $ws6
+bindsym $mod+Control+7 move container to workspace number $ws7,  workspace $ws7
+bindsym $mod+Control+8 move container to workspace number $ws8,  workspace $ws8
+bindsym $mod+Control+9 move container to workspace number $ws9,  workspace $ws9
+bindsym $mod+Control+0 move container to workspace number $ws10, workspace $ws10
+
 # Go back to last workspace easily. Example:
 # Hit $mod+2 to go to workspace 2, and hit it again to go to last workspace
 workspace_auto_back_and_forth yes
+
+# Move workspace to another monitor
+bindsym $mod+o move workspace to output left
+bindsym $mod+p move workspace to output right
+# Move container to another monitor
+bindsym $mod+Shift+o move container to output left
+bindsym $mod+Shift+p move container to output right
+# Move container to another monitor and switch to that monitor
+bindsym $mod+Control+o move container to output left,  focus output left
+bindsym $mod+Control+p move container to output right, focus output right
+
+# WIP
+# set $workspace_to_monitor Send workspace to left/right monitor
+# bindsym $mod+Shift+p mode "$workspace_to_monitor"
+# mode "$workspace_to_monitor" {
+#   bindsym h move workspace to output left
+#   bindsym l move workspace to output right
+
+#   bindsym j move workspace to output left
+#   bindsym k move workspace to output right
+
+#   bindsym w move workspace to output left
+
+#   bindsym left move workspace to output left
+#   bindsym right move workspace to output right
+
+#   bindsym Escape mode "default"
+#   bindsym Control+c mode "default"
+#   bindsym p mode "default"
+#   bindsym q mode "default"
+#   bindsym $mod+Shift+p mode "default"
+# }
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -343,6 +389,8 @@ exec_always picom
 
 # Meu Deus, esse barulho é muito alto! Tirar o "pc speaker", que são
 # os bips quando a busca no Firfox não encontra nada, por exemplo
+# Precisa de privilégios sudo pra isso, então não vai funcionar aqui.
+# https://wiki.archlinux.org/title/PC_speaker
 exec rmmod pcspkr
 
 focus_follows_mouse no
@@ -392,9 +440,9 @@ set $ubgcolor   #8b1a38
 #       the end. This can be useful to set transparency based on itens, and not
 #       based on the variable.
 # --------------------- border --- background --- text ------ indicator
-client.focused          $bgcolor   $bgcolor70     $textcolor  $bgcolor
-client.unfocused        $ibgcolor  $ibgcolorDD    $itextcolor $ibgcolor
-client.focused_inactive $ibgcolor  $ibgcolor      $itextcolor $ibgcolor
+client.focused          $bgcolor   $bgcolor       $textcolor  $bgcolor
+client.unfocused        $ibgcolor  $ibgcolor      $itextcolor $ibgcolor
+client.focused_inactive $ibgcolor  $itextcolor    $itextcolor $ibgcolor
 client.urgent           $ubgcolor  $ubgcolor      $textcolor  $ubgcolor
 
 # Start i3bar to display a workspace bar (plus the system information i3status
@@ -405,9 +453,11 @@ bar {
   # status_command i3status --config ~/.config/i3/i3status.conf
   status_command i3blocks -c ~/.config/i3/i3blocks.conf
   position top
+  tray_output eDP1
   font pango:Font Awesome 9
+  binding_mode_indicator yes
   workspace_min_width 30
-  i3bar_command i3bar --transparency
+  # i3bar_command i3bar --transparency
   colors {
       background #000000
       statusline #ffffff
@@ -437,10 +487,11 @@ assign [instance="discord" class="discord"] 10
 assign [instance="zoom" class="zoom"] 9
 for_window [instance="zoom" class="zoom"] floating enable
 for_window [instance="gnome-mines" class="Gnome-mines"] floating enable
+for_window [instance="gedit" class="Gedit"] floating enable
 for_window [window_role="pop_up"] floating enable
 for_window [window_role="task_dialog"] floating enable
 
-for_window [class="^.*"] border pixel 2
+for_window [class="^.*"] border pixel 5
 # new_window 1pixel
 
 bindsym $mod+Return exec alacritty
