--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -29,37 +29,50 @@ separator_block_width=15
 markup=none
 
 [docker]
-command=$HOME/.config/i3/blocklets-scripts/docker.sh
+# command=$HOME/.config/i3/blocklets-scripts/docker.sh
+command=docker ps -q | wc -l | xargs echo "$LABEL"
 color=#0db7ed
-interval=10
+interval=5
 LABEL=🐳
+align=center
 
 [dunst]
 command=$HOME/.config/i3/blocklets-scripts/dunst.py
 interval=once
 format=json
 markup=pango
-min_width=15
+min_width=18
+align=center
+signal=13
+
+[memory]
+# command=$HOME/.config/i3/blocklets-scripts/memory.sh
+command=free -h | awk '/^Mem:/ {print " "$3}'
+label=MEM
+interval=10
+color=#DE6347
 align=center
 
 [backlight]
 # TODO make this work with scroll
 command=$HOME/.config/i3/blocklets-scripts/backlight.sh
 label= 
-interval=10
+interval=1
 #STEP_SIZE=5
 USE_SUDO=1
-min_width=40
+min_width=64
 align=center
 signal=12
+color=#AAEB6A
 
 [mic-control]
 command=$HOME/.config/i3/blocklets-scripts/mic-control.sh
 SOURCE=alsa_input.pci-0000_00_1f.3.analog-stereo
-interval=5
+interval=once
 signal=11
-min_width=40
+min_width=53
 align=center
+color=#D6CE6F
 
 [volume-pulseaudio]
 # TODO make this work with mouse buttons and scroll
@@ -69,17 +82,30 @@ interval=persist
 SUBSCRIBE=1
 USE_ALSA_NAME=1
 LONG_FORMAT="${SYMB}${VOL}%"
-min_width=40
+min_width=58
+align=center
+color=#D986C0
 
 [battery2]
 command=$HOME/.config/i3/blocklets-scripts/battery2.py
 markup=pango
-interval=3
+interval=1
+align=center
+color=#D6CE6F
+
+[date]
+command=date "+  %a, %d/%b/%y"
+interval=1
+color=#6FB4D6
+min_width=175
 align=center
 
-[time]
-command=date "+%a, %d/%b/%y  %H:%M"
+[relogio]
+command=date "+  %H:%M"
 interval=1
+color=#00ff00
+min_width=115
+align=center
 
 # OpenVPN support
 #
