--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -103,9 +103,13 @@ align=center
 [relogio]
 command=date "+  %H:%M"
 interval=1
-color=#00ff00
 min_width=115
 align=center
+
+[turbo]
+command=echo TURBO
+interval=once
+color=#00ff00
 
 # OpenVPN support
 #
