Modify battery script to show different icons based on percentage left

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -86,12 +86,12 @@ min_width=58
 align=center
 color=#D986C0
 
-[battery2]
-command=$HOME/.config/i3/blocklets-scripts/battery2.py
+[battery]
+command=$HOME/.config/i3/blocklets-scripts/mod-battery2.py
 markup=pango
 interval=1
 align=center
-color=#D6CE6F
+# color=#D6CE6F
 
 [date]
 command=date "+  %a, %d/%b/%y"
