--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -107,8 +107,11 @@ min_width=115
 align=center
 
 [turbo]
-command=echo TURBO
-interval=once
+# command=echo TURBO
+# command=$HOME/.config/i3/blocklets-scripts/turbo.sh
+# command=$HOME/.config/i3/blocklets-scripts/turbo.lua
+command=$HOME/.config/i3/blocklets-scripts/turbo/turbo.py
+interval=100
 color=#00ff00
 
 # OpenVPN support
