--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -81,6 +81,7 @@ command=$HOME/.config/i3/blocklets-scripts/volume-pulseaudio.sh
 interval=persist
 SUBSCRIBE=1
 USE_ALSA_NAME=1
+AUDIO_MED_THRESH=49
 LONG_FORMAT="${SYMB}${VOL}%"
 min_width=58
 align=center
