Improve blocklets and changed some i3 configs
Created calendar blocket using the simple zenity command
Battery now shows time left as a notification when clicked
Changed compositor to use xcompmgr as per Zoom help article
Auto starts flameshot
Auto starts some xset commands that hopefully disable screen turning off after a few idle minutes
Microphone starts muted
Change command to close windows. It was mod+shift+q, now it is mod+control+c to match AwesomeWM
Change command to reload i3. It was mod+shift+r, now it is mod+control+r to match AwesomeWM
Dmenu now has black background to match the i3 bar
Mod+/ and Mod+Shift+/ now also mute audio and microphone, respectively
Change inactive but focues font color because it was impossible to read window
title when this happenned, since both the background and the foregound had the same colors
Mod+Escape now switches to last visited workspace (back and forth)

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -41,7 +41,7 @@ command=$HOME/.config/i3/blocklets-scripts/dunst.py
 interval=once
 format=json
 markup=pango
-min_width=18
+min_width=20
 align=center
 signal=13
 
@@ -60,13 +60,13 @@ label=
 interval=1
 #STEP_SIZE=5
 USE_SUDO=1
-min_width=64
+min_width=60
 align=center
 signal=12
 color=#AAEB6A
 
-[mic-control]
-command=$HOME/.config/i3/blocklets-scripts/mic-control.sh
+[microphone-control]
+command=$HOME/.config/i3/blocklets-scripts/microphone-control.sh
 SOURCE=alsa_input.pci-0000_00_1f.3.analog-stereo
 interval=once
 signal=11
@@ -74,16 +74,12 @@ min_width=53
 align=center
 color=#D6CE6F
 
-[volume-pulseaudio]
-# TODO make this work with mouse buttons and scroll
-# Would be nice if it behaved like mic-control
-command=$HOME/.config/i3/blocklets-scripts/volume-pulseaudio.sh
-interval=persist
-SUBSCRIBE=1
-USE_ALSA_NAME=1
+[volume-control]
+command=$HOME/.config/i3/blocklets-scripts/volume-control.sh
+interval=once
+signal=10
 AUDIO_MED_THRESH=49
-LONG_FORMAT="${SYMB}${VOL}%"
-min_width=58
+min_width=60
 align=center
 color=#D986C0
 
@@ -95,16 +91,18 @@ align=center
 # color=#D6CE6F
 
 [date]
-command=date "+  %a, %d/%b/%y"
+command=$HOME/.config/i3/blocklets-scripts/calendar.sh
+DATE_FORMAT=+  %a %d %b
 interval=1
 color=#6FB4D6
-min_width=175
+# min_width=175
+min_width=130
 align=center
 
 [relogio]
 command=date "+  %H:%M"
 interval=1
-min_width=115
+min_width=90
 align=center
 
 [turbo]
