--- a/i3/config
+++ b/i3/config
@@ -22,7 +22,9 @@
 # Fonts Awesome
 # Flameshot
 # alacritty
-# compton
+# Not really picom/compton
+# Zoom pages told me to use xcompmgr, so that's it
+# xcompmgr
 # xwallpaper
 # xbacklight
 # For some blocklets, docker and dunst I guess
@@ -38,9 +40,9 @@
 # mod+e toggle tiling layouts and mod+t go to tabbed layout
 # mod+backspace shows "System control" menu: lock screen, logout, reboot or shutdown
 # mod+shift+backspace shows menu to controll brightness, microphone and volume
-# mod+m toggle mute sound, mod+, decreases sound and mod+. increases it
+# mod+m toggle mute sound, `mod+,` decreases sound and `mod+.` increases it
 # Same bindings for microphone, but holding shift:
-#   mod+shift+m toggle mute mic, mod+shift+, decrease mic volume and mod+shift+. increases it
+#   mod+shift+m toggle mute mic, `mod+shift+,` decrease mic volume and `mod+shift+.` increases it
 # mod+[ and mod+] decreases and increases brightness
 # mod+enter opens alacritty
 # mod+b opens firefox
@@ -48,12 +50,12 @@
 # mod+uiop resizes without having to go into resize mode
 # mod+hjkl changes focus
 # mod+f toggle full screen
-# mod+shift+q closes window
+# mod+control+c closes window
 # On those menus (resize mode, system control mode and vol/mic/brightness control),
 # there is always plenty of ways of quiting. The same command used to start the menu
 # always quit it, as well as Control+C, ESC and simply the Q key. The only exception
 # being the resize mode, where Q acts as H (since mod+q acts as mod+h, change focus)
-# mod+shift+r restarts i3 presenving layout and sessions
+# mod+control+r restarts i3 presenving layout and sessions
 # mod+shift+c reloads the configuration file
 # mod+n toggle dunst on and off
 ################################################################################
@@ -83,23 +85,34 @@ exec --no-startup-id nm-applet
 # Start dunst
 exec --no-startup-id dunst
 
+# Start flameshot
+exec --no-startup-id flameshot
+
 # Compositor
-# exec_always picom -- picom but had too much screen tearing on Zoom ):
-exec_always --no-startup-id compton -b
+# I'm having too much screen tearing on Zoom ):
+# exec_always --no-startup-id picom -o 0
+# exec_always --no-startup-id compton -b
+# https://support.zoom.us/hc/en-us/articles/202082128-Black-screen-during-screen-sharing
+exec_always --no-startup-id xcompmgr -c -l0 -t0 -r0 -o.00
 
 # Meu Deus, esse barulho é muito alto! Tirar o "pc speaker", que são
 # os bips quando a busca no Firfox não encontra nada, por exemplo
 # Precisa de privilégios sudo pra isso, então não vai funcionar aqui.
 # https://wiki.archlinux.org/title/PC_speaker
-exec rmmod pcspkr
+exec_always rmmod pcspkr
+# https://askubuntu.com/questions/763994/screen-times-out-in-i3-wm
+# xset q pra ver as configurações atuais
+exec_always xset s off
+exec_always xset -dpms
 
-# Start audio and mic not too loud
-exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ 20% && $refresh_audio_icon
-exec --no-startup-id pactl set-source-volume "alsa_input.pci-0000_00_1f.3.analog-stereo" 30% && $refresh_mic_icon
+# Start audio and mic not too loud, and with mic muted
+exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ 50% && $refresh_audio_icon
+exec --no-startup-id pactl set-source-volume "alsa_input.pci-0000_00_1f.3.analog-stereo" 30%
+exec --no-startup-id pactl set-source-mute "alsa_input.pci-0000_00_1f.3.analog-stereo" 1 && $refresh_mic_icon
 
 # Disable notebook things
 exec sh ~/scripts/disable-keyboard.sh
-exec sh ~/scripts/disable-touchpad.sh
+# exec sh ~/scripts/disable-touchpad.sh
 
 # Wallpaper
 exec sh ~/scripts/setwallpaper.sh ~/Pictures/wallpapers/wall.jpg
@@ -120,13 +133,15 @@ bindsym XF86AudioMute         exec --no-startup-id pactl set-sink-mute @DEFAULT_
 bindsym $mod+comma   exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -2%  && $refresh_audio_icon
 bindsym $mod+period  exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +2%  && $refresh_audio_icon
 bindsym $mod+m       exec --no-startup-id pactl set-sink-mute   @DEFAULT_SINK@ toggle && $refresh_audio_icon
+bindsym $mod+slash   exec --no-startup-id pactl set-sink-mute   @DEFAULT_SINK@ toggle && $refresh_audio_icon
 
 # Mic (i3 blocklet must have signal=11 matching this RTMIN+11)
 set $refresh_mic_icon pkill -RTMIN+11 i3blocks
-bindsym XF86AudioMicMute  exec --no-startup-id pactl set-source-mute "alsa_input.pci-0000_00_1f.3.analog-stereo"   toggle && $refresh_mic_icon
+bindsym XF86AudioMicMute  exec --no-startup-id pactl set-source-mute   "alsa_input.pci-0000_00_1f.3.analog-stereo" toggle && $refresh_mic_icon
 bindsym $mod+Shift+comma  exec --no-startup-id pactl set-source-volume "alsa_input.pci-0000_00_1f.3.analog-stereo" -2%  &&   $refresh_mic_icon
 bindsym $mod+Shift+period exec --no-startup-id pactl set-source-volume "alsa_input.pci-0000_00_1f.3.analog-stereo" +2%  &&   $refresh_mic_icon
 bindsym $mod+Shift+m      exec --no-startup-id pactl set-source-mute   "alsa_input.pci-0000_00_1f.3.analog-stereo" toggle && $refresh_mic_icon
+bindsym $mod+Shift+slash  exec --no-startup-id pactl set-source-mute   "alsa_input.pci-0000_00_1f.3.analog-stereo" toggle && $refresh_mic_icon
 
 # Brightness (i3 blocklet must have signal=12 matching this RTMIN+12)
 set $refresh_brightness_icon pkill -RTMIN+12 i3blocks
@@ -141,13 +156,14 @@ bindsym $mod+n exec dunstctl set-paused toggle && $refresh_notification_icon
 floating_modifier $mod
 
 # kill focused window
-bindsym $mod+Shift+q kill
+# bindsym $mod+Shift+q kill
+bindsym $mod+Control+c kill
 
 # start dmenu (a program launcher)
 # Consider making some patches to dmenu, at least the fuzzy matcher: https://tools.suckless.org/dmenu/patches/fuzzymatch/
 # The -i flag for canse insensitive (default)
 # The -h flag is for line height, requires this patch: https://tools.suckless.org/dmenu/patches/line-height/
-bindsym $mod+d exec --no-startup-id dmenu_run -i -h 21 -p "search" -sb "$bgcolor"
+bindsym $mod+d exec --no-startup-id dmenu_run -i -h 21 -p "search" -sb "$bgcolor" -nb "#000000"
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
@@ -162,6 +178,7 @@ bindsym $mod+k focus up
 bindsym $mod+l focus right
 bindsym $mod+q focus left
 bindsym $mod+w focus right
+bindsym $mod+Escape workspace back_and_forth
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -295,13 +312,17 @@ bindsym $mod+Control+x move container to output right, focus output right
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r restart
+bindsym $mod+Control+r restart
 # exit i3 (logs you out of your X session)
 # bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
+# Lock screen
+# set $i3lockwall i3lock -i ~/Pictures/wallpapers/tux3.png -t
+set $i3lockwall i3lock
+
 # Menu to quickly shutdown/restart/suspend
 # set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (CTRL+s) shutdown
-set $mode_system Lock (l), Logout/Exit (e), Reboot (r), Shutdown (CTRL+s)
+set $mode_system Lock (L), Logout/Exit (E), Reboot (R), Shutdown (CTRL+S)
 
 bindsym $mod+BackSpace mode "$mode_system"
 mode "$mode_system" {
@@ -408,10 +429,6 @@ mode "$volume_control" {
   bindsym $mod+Shift+BackSpace mode "default"
 }
 
-# Lock screen
-# set $i3lockwall i3lock -i ~/Pictures/wallpapers/tux3.png -t
-set $i3lockwall i3lock
-
 focus_follows_mouse no
 
 # resize window (you can also use the mouse for that)
@@ -471,7 +488,7 @@ set $ubgcolor   #8b1a38
 # --------------------- border --- background --- text ------ indicator
 client.focused          $bgcolor   $bgcolor       $textcolor  $bgcolor
 client.unfocused        $ibgcolor  $ibgcolor      $itextcolor $ibgcolor
-client.focused_inactive $ibgcolor  $itextcolor    $itextcolor $ibgcolor
+client.focused_inactive $ibgcolor  $itextcolor    $ibgcolor   $ibgcolor
 client.urgent           $ubgcolor  $ubgcolor      $textcolor  $ubgcolor
 
 # Start i3bar to display a workspace bar (plus the system information i3status
