--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -27,17 +27,18 @@
 command=/usr/share/i3blocks/$BLOCK_NAME
 separator_block_width=15
 markup=none
+I3_BLOCKLETS_SCRIPTS_PATH=/home/lucas/.config/i3/blocklets-scripts/
 
 [docker]
-# command=$HOME/.config/i3/blocklets-scripts/docker.sh
-command=docker ps -q | wc -l | xargs echo "$LABEL"
+command=$I3_BLOCKLETS_SCRIPTS_PATH/docker.sh
+# command=docker ps -q | wc -l | xargs echo "$LABEL"
 color=#0db7ed
 interval=5
 LABEL=🐳
 align=center
 
 [dunst]
-command=$HOME/.config/i3/blocklets-scripts/dunst.py
+command=$I3_BLOCKLETS_SCRIPTS_PATH/dunst.py
 interval=once
 format=json
 markup=pango
@@ -46,7 +47,7 @@ align=center
 signal=13
 
 [memory]
-# command=$HOME/.config/i3/blocklets-scripts/memory.sh
+# command=$I3_BLOCKLETS_SCRIPTS_PATH/memory.sh
 command=free -h | awk '/^Mem:/ {print " "$3}'
 label=MEM
 interval=10
@@ -54,10 +55,9 @@ color=#DE6347
 align=center
 
 [backlight]
-# TODO make this work with scroll
-command=$HOME/.config/i3/blocklets-scripts/backlight.sh
+command=$I3_BLOCKLETS_SCRIPTS_PATH/backlight.sh
 label= 
-interval=1
+interval=once
 #STEP_SIZE=5
 USE_SUDO=1
 min_width=60
@@ -66,7 +66,7 @@ signal=12
 color=#AAEB6A
 
 [microphone-control]
-command=$HOME/.config/i3/blocklets-scripts/microphone-control.sh
+command=$I3_BLOCKLETS_SCRIPTS_PATH/microphone-control.sh
 SOURCE=alsa_input.pci-0000_00_1f.3.analog-stereo
 interval=once
 signal=11
@@ -75,7 +75,7 @@ align=center
 color=#D6CE6F
 
 [volume-control]
-command=$HOME/.config/i3/blocklets-scripts/volume-control.sh
+command=$I3_BLOCKLETS_SCRIPTS_PATH/volume-control.sh
 interval=once
 signal=10
 AUDIO_MED_THRESH=49
@@ -84,14 +84,15 @@ align=center
 color=#D986C0
 
 [battery]
-command=$HOME/.config/i3/blocklets-scripts/mod-battery2.py
+command=$I3_BLOCKLETS_SCRIPTS_PATH/mod-battery2.py
+# command=$I3_BLOCKLETS_SCRIPTS_PATH/battery.lua
 markup=pango
 interval=1
 align=center
 # color=#D6CE6F
 
 [date]
-command=$HOME/.config/i3/blocklets-scripts/calendar.sh
+command=$I3_BLOCKLETS_SCRIPTS_PATH/calendar.sh
 DATE_FORMAT=+  %a %d %b
 interval=1
 color=#6FB4D6
@@ -107,9 +108,9 @@ align=center
 
 [turbo]
 # command=echo TURBO
-# command=$HOME/.config/i3/blocklets-scripts/turbo.sh
-# command=$HOME/.config/i3/blocklets-scripts/turbo.lua
-command=$HOME/.config/i3/blocklets-scripts/turbo/turbo.py
+# command=$I3_BLOCKLETS_SCRIPTS_PATH/turbo.sh
+# command=$I3_BLOCKLETS_SCRIPTS_PATH/turbo.lua
+command=$I3_BLOCKLETS_SCRIPTS_PATH/turbo/turbo.py
 interval=100
 color=#00ff00
 
