--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,8 @@
 set-option -g default-shell /bin/zsh
 
+# prefix + C-l clears screen. Useful because I remapped C-l to move around panes
+bind C-l send-keys 'C-l'
+
 # Pro esc não ficar lerdo dentro do nvim dentro do tmux
 # https://github.com/neovim/neovim/issues/2035
 set -sg escape-time 10
