--- a/i3/config
+++ b/i3/config
@@ -103,7 +103,7 @@ exec_always rmmod pcspkr
 # Aumenta o número de vezes que uma tecla é apertada quando seguramos ela
 exec_always --no-startup-id xset r rate 220 25
 # https://askubuntu.com/questions/763994/screen-times-out-in-i3-wm
-# xset q pra ver as configurações atuais
+# `xset q` pra ver as configurações atuais
 exec_always xset s off
 exec_always xset -dpms
 
@@ -172,6 +172,8 @@ bindsym $mod+d exec --no-startup-id dmenu_run -i -h 21 -p "search" -sb "$bgcolor
 
 # why
 focus_follows_mouse no
+# why
+mouse_warping none
 
 # change focus
 # bindsym $mod+ccedilla focus right
@@ -222,7 +224,7 @@ bindsym $mod+m       layout toggle splith tabbed
 bindsym $mod+Shift+m layout toggle splith tabbed
 
 # toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
+bindsym $mod+Control+space floating toggle
 
 # change focus between tiling / floating windows
 bindsym $mod+space focus mode_toggle
@@ -544,6 +546,7 @@ for_window [instance="zoom" class="zoom"] floating enable
 for_window [instance="gnome-mines" class="Gnome-mines"] floating enable
 for_window [instance="gedit" class="Gedit"] floating enable
 for_window [instance="pavucontrol" class="Pavucontrol"] floating enable
+for_window [instance="Erlang" class="Erlang"] floating enable
 for_window [window_role="pop_up"] floating enable
 for_window [window_role="task_dialog"] floating enable
 
