--- a/i3/config
+++ b/i3/config
@@ -95,6 +95,9 @@ exec --no-startup-id flameshot
 # https://support.zoom.us/hc/en-us/articles/202082128-Black-screen-during-screen-sharing
 exec_always --no-startup-id xcompmgr -c -l0 -t0 -r0 -o.00
 
+# Hide mouse
+exec_always --no-startup-id unclutter
+
 # Meu Deus, esse barulho é muito alto! Tirar o "pc speaker", que são
 # os bips quando a busca no Firfox não encontra nada, por exemplo
 # Precisa de privilégios sudo pra isso, então não vai funcionar aqui.
@@ -184,6 +187,7 @@ bindsym $mod+l focus right
 bindsym $mod+q focus left
 bindsym $mod+w focus right
 bindsym $mod+Escape workspace back_and_forth
+bindsym $mod+u [urgent=latest] focus
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -441,10 +445,10 @@ mode "$volume_control" {
 }
 
 # resize window (you can also use the mouse for that)
-bindsym $mod+u resize shrink width 5 px or 5 ppt
-bindsym $mod+i resize grow height 5 px or 5 ppt
-bindsym $mod+o resize shrink height 5 px or 5 ppt
-bindsym $mod+p resize grow width 5 px or 5 ppt
+bindsym $mod+i          resize shrink width 5 px or 5 ppt
+bindsym $mod+o          resize grow height 5 px or 5 ppt
+bindsym $mod+p          resize shrink height 5 px or 5 ppt
+bindsym $mod+dead_acute resize grow width 5 px or 5 ppt
 
 bindsym $mod+r mode "resize"
 mode "resize" {
