Remove language right prompt from zsh, add i3blocks memory block clickable action and decrease i3 windows border width

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -47,13 +47,14 @@ align=center
 signal=13
 
 [memory]
-# command=$I3_BLOCKLETS_SCRIPTS_PATH/memory.sh
-command=free -h | awk '/^Mem:/ {print " "$3}'
+command=$I3_BLOCKLETS_SCRIPTS_PATH/memory.sh
+# command=free -h | awk '/^Mem:/ {print " "$3}'
 label=MEM
 interval=10
 color=#DE6347
 align=center
 
+# Brightness
 [backlight]
 command=$I3_BLOCKLETS_SCRIPTS_PATH/backlight.sh
 label= 
