--- a/polybar/config
+++ b/polybar/config
@@ -36,7 +36,7 @@ height = 21
 ;offset-x = 1%
 ;offset-y = 1%
 radius = 0.0
-fixed-center = false
+fixed-center = true
 locale = pt_BR.UTF-8
 
 background = ${colors.background}
@@ -51,24 +51,24 @@ border-color = #00000000
 padding-left = 0
 padding-right = 2
 
-module-margin-left = 1
-module-margin-right = 1
+module-margin-left = 2
+module-margin-right = 2
 
-font-0 = fixed:pixelsize=10;1
-font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
-font-2 = siji:pixelsize=10;1
-font-3 = FontAwesome:pixelsize=12;1
+font-0 = fixed:pixelsize=11;1
+font-1 = fixed:pixelsize=11:style=bold;1
+font-2 = FontAwesome:pixelsize=12;1
 ; Emojis show huge without proper scale.
 ; The bigger the number, the smaller the characters.
-font-4 = Noto Color Emoji:scale=10;
+font-3 = Noto Color Emoji:scale=10;
 
 modules-left = i3
 ; modules-left = i3 xwindow active-window-title
-; modules-center =
-modules-right = docker dunst brightness pulseaudio-microphone volume battery date-time
+; modules-center = date-time
+; modules-right = docker dunst memory brightness pulseaudio-microphone volume battery
+modules-right = docker dunst memory brightness pulseaudio-microphone volume battery date-time turbo
 
 tray-position = right
-tray-padding = 2
+tray-padding = 0
 ;tray-background = #0063ff
 
 ;wm-restack = bspwm
@@ -203,6 +203,18 @@ type = custom/script
 interval = 10
 exec       = ~/.config/polybar/scripts/docker.sh icon
 click-left = ~/.config/polybar/scripts/docker.sh notify
+
+[module/memory]
+type = custom/script
+interval = 10
+exec       = ~/.config/polybar/scripts/memory-poly.sh icon
+click-left = ~/.config/polybar/scripts/memory-poly.sh notify
+
+[module/turbo]
+type = custom/script
+exec = echo %{F#00ff00}TURBO
+click-left = BLOCK_BUTTON=yes /bin/env python3 $HOME/.config/i3/blocklets-scripts/turbo/turbo.py
+
 
 [settings]
 screenchange-reload = true
