Many awesomwwm tweaks

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -111,3 +111,19 @@ unbind C-p
 # set -ga terminal-overrides ',xterm*:smcup@:rmcup@'
 
 bind-key -r b run-shell "tmux neww bash -c \"~/scripts/tmux-chtsh/tmux-cht.sh\""
+
+# AwesomeWM Vim Tmux navigator section
+# # Set title suffix to "- TMUX"
+set-option -g set-titles on
+set-option -g set-titles-string '#S: #W - TMUX'
+# Smart pane switching with awareness of vim splits and system windows
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+	| grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind -n C-Left if-shell "$is_vim" "send-keys C-h" "run-shell 'sh ~/.config/awesome/awesomewm-vim-tmux-navigator/tmux_focus.sh left'"
+bind -n C-Down if-shell "$is_vim" "send-keys C-j" "run-shell 'sh ~/.config/awesome/awesomewm-vim-tmux-navigator/tmux_focus.sh down'"
+bind -n C-Up if-shell "$is_vim" "send-keys C-k" "run-shell 'sh ~/.config/awesome/awesomewm-vim-tmux-navigator/tmux_focus.sh up'"
+bind -n C-Right if-shell "$is_vim" "send-keys C-l" "run-shell 'sh ~/.config/awesome/awesomewm-vim-tmux-navigator/tmux_focus.sh right'"
+bind-key -T copy-mode-vi 'C-Left' "run-shell 'sh ~/.config/awesome/awesomewm-vim-tmux-navigator/tmux_focus.sh left'"
+bind-key -T copy-mode-vi 'C-Down' "run-shell 'sh ~/.config/awesome/awesomewm-vim-tmux-navigator/tmux_focus.sh down'"
+bind-key -T copy-mode-vi 'C-Up' "run-shell 'sh ~/.config/awesome/awesomewm-vim-tmux-navigator/tmux_focus.sh up'"
+bind-key -T copy-mode-vi 'C-Right' "run-shell 'sh ~/.config/awesome/awesomewm-vim-tmux-navigator/tmux_focus.sh right'"
