--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -82,7 +82,7 @@ window:
 
   # Window title
   # title: Alacritty
-  title: alacritty
+  # title: alacritty
 
   # Allow terminal applications to change Alacritty's window title.
   dynamic_title: true
